# epsilon.fm

./: .dockerignore  .env.example  .eslintignore  .gitignore  .lintstagedrc  .lintstagedrc.js  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .ruff.toml  .stylelintrc.json  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  ai.code  ai.context  bun.lockb  capacitor.config.ts  combine_code_files.py  combined_svelte.txt  combined_ts.txt  commitlint.config.js  components.json  consolidate_code.py  docker-compose.yml  drizzle.config.ts  eslint.config.js  lint-staged.config.js  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  response.json  rollup.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  (+2 more)
.changeset/: thick-donkeys-brush.md
backend/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  alembic.ini  entrypoint.sh  mypy.ini  pyproject.toml  requirements.txt
backend/src/apps/admin/tasks/: schemas.py
backend/src/apps/admin/tasks/routers/: v1.py
backend/src/apps/admin/tasks/tests/: test_v1.py
backend/src/apps/admin/users/: crud.py
backend/src/apps/admin/users/routers/: v1.py
backend/src/apps/admin/users/tests/: test_v1.py
backend/src/apps/artists/: schemas.py
backend/src/apps/artists/routers/: v1.py
backend/src/apps/auth/routers/: v1.py
backend/src/apps/auth/tests/: test_v1.py
backend/src/apps/blog/posts/: crud.py  schemas.py
backend/src/apps/blog/posts/routers/: v1.py
backend/src/apps/blog/posts/tests/: test_v1.py
backend/src/apps/e/artists/: models.py
backend/src/apps/e/tracks/: models.py
backend/src/apps/epsilon/artists/: crud.py  models.py  schemas.py
backend/src/apps/epsilon/tracks/: crud.py  schemas.py
backend/src/apps/ms/: models.py  router.py  schemas.py
backend/src/apps/ms/albums/: models.py  schemas.py
backend/src/apps/ms/artists/: crud.py  models.py  schemas.py
backend/src/apps/ms/genres/: models.py  schemas.py
backend/src/apps/ms/label/: models.py  schemas.py
backend/src/apps/ms/labels/: models.py  schemas.py
backend/src/apps/ms/releases/: models.py  schemas.py
backend/src/apps/ms/subgenres/: models.py  schemas.py
backend/src/apps/ms/tracks/: crud.py  models.py  schemas.py
backend/src/apps/system/rate_limits/: models.py
backend/src/apps/system/tiers/: crud.py
backend/src/apps/tracks/: crud.py  models.py  schemas.py
backend/src/apps/tracks/routers/: v1.py
backend/src/core/: config.py  logger.py  security.py  setup.py
backend/src/core/api/: __init__.py  dependencies.py  v1.py
backend/src/core/common/: crud.py  models.py
backend/src/core/db/: Dockerfile  __init__.py  session.py
backend/src/core/exceptions/: cache_exceptions.py  http_exceptions.py
backend/src/core/middlewares/: client_cache_middleware.py
backend/src/core/utils/: cache.py  crud.py  log.py  paginated.py  partial.py  rate_limit.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2024_07_21_09_35_2bcc2a7dae9f_.py  2024_08_05_21_14_c1c6ea23f7a5_.py  2024_08_05_21_21_cda4ac6fa060_.py  2024_08_06_07_49_e36bf0625d1e_.py  2024_08_08_14_19_6254cca2aae7_.py  2024_08_08_18_02_1912981ceef1_.py
backend/tests/: helper.py  test_main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
(+399 files in other folders)
