[package]
name = "Epsilon"
version = "0.1.0"
description = "A modern open-source music distribution platform."
authors = ["Nathaniel Houk"]
license = "MIT"
repository = "github.com/natehouk/epsilon.fm"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.0", features = [] }
